$Id: ChangeLog,v 1.8 2004/02/07 06:47:35 mthuurne Exp $

2004-02-07 Maarten ter Huurne <maarten@treewalker.org>
	* Integrated dependency checking from openMSX alternative.mk.
	* Fixed compile warnings that showed up at "-Wall".

2004-02-06 Manuel Bilderbeek <manuel@msxnet.org>
	* added version variable in Makefile (maybe add config.h?)
	* more .cvsignore entries

2004-02-06 Herman Oudejans <hn.oudejans@quicknet.nl>
	* machines and extensions are refreshed after the
	  configuration dialog has been called
	* added program icon
	* removed unicode from xml parser
	* replaced diskimage.bmp
	* moved version number to config.h

2004-02-05 Wouter Vermaelen <wouter.vermaelen@pi.be>
	* handle unknown XML tags better

2004-02-05 Herman Oudejans <hn.oudejans@quicknet.nl>
	* the xml parser now supports the new xml structure.
	* removed the fake xml parser from the windowsversion.
	* fixed the win32 build process (wxg to xrc)

2004-02-04 Manuel Bilderbeek <manuel@msxnet.org>
	* openMSX Catapult: initial CVS version (Oss Release)